k8s/postgres.yml
apiVersion: v1
kind: Namespace
metadata:
  name: auth
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-database
  namespace: auth
  labels:
    app: postgres-database
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: postgres-database
  template:
    metadata:
      labels:
        app: postgres-database
    spec:
      containers:
      - name: postgres-database
        image: postgres:bullseye
        ports:
        - containerPort: 5431
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-storage
      restartPolicy: Always
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-volume-claim
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-keycloak
  namespace: auth
  labels:
    app: postgres-database
spec:
  ports:
    - name: postgres-keycloak
      port: 5431
      targetPort: 5431
  selector:
    app: postgres-database
status:
  loadBalancer: {}
