k8s/rabbitmq.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: icerabbitmq
  namespace: rabbitmq-system
spec:
  rules:
  - host: "rabbitmq-management.192.168.49.2.nip.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: icerabbitmq
            port: 
              number: 15672
